--- a/archi/src/index.css
+++ b/archi/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.Nav {
+  font-size: 2em;
+}
+.signup{
+  background-color: blueviolet;
+}
