--- a/archi/src/index.css
+++ b/archi/src/index.css
@@ -11,6 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+main {
+  text-align: center;
+}
 .Nav {
   font-size: 2em;
 }
@@ -21,4 +24,26 @@ code {
   list-style-type: none;
   margin: 0 auto;
   padding: 0;
+}
+.signUp{
+    text-align: center;
+    width: 400px;
+}
+input[type=text], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  box-sizing: border-box;
+}
+input[type=password], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  box-sizing: border-box;
 }
